# NetGauze

./: .gitignore  AUTHORS  Cargo.toml  NOTICE  README.md  rustfmt.toml
.cargo/: config.toml
crates/analytics/: Cargo.toml  README.md
crates/analytics/src/: aggregation.rs  flow.rs  lib.rs
crates/bgp-pkt/: Cargo.toml  README.md
crates/bgp-pkt/benches/: serde_benchmark.rs
crates/bgp-pkt/examples/: bgp.rs
crates/bgp-pkt/src/: bgp_ls.rs  capabilities.rs  codec.rs  community.rs  iana.rs  lib.rs  nlri.rs  notification.rs  open.rs  path_attribute.rs  route_refresh.rs  update.rs
crates/bgp-pkt/src/nlri/: bgp_ls.rs  mod.rs  nlri.rs
crates/bgp-pkt/src/path_attribute/: bgp_ls.rs  bgp_sid.rs  mod.rs  path_attribute.rs
crates/bgp-speaker/: Cargo.toml  README.md
crates/bgp-speaker/examples/: log_listener.rs
crates/bgp-speaker/src/: codec.rs  connection.rs  events.rs  fsm.rs  lib.rs  listener.rs  peer.rs  peer_controller.rs  peer_test.rs  supervisor.rs
crates/bmp-pkt/: Cargo.toml  README.md
crates/bmp-pkt/benches/: serde_benchmark.rs
crates/bmp-pkt/examples/: bmp.rs
crates/bmp-pkt/src/: codec.rs  iana.rs  lib.rs  v3.rs  v4.rs  version4.rs
crates/bmp-service/: Cargo.toml  README.md
crates/bmp-service/examples/: bmp-actor-example.rs  bmp-supervisor-example.rs  print-bmp.rs
crates/bmp-service/src/: actor.rs  codec.rs  handle.rs  lib.rs  server.rs  supervisor.rs  transport.rs
crates/cli-utility-pcap-to-json/: Cargo.toml
crates/cli-utility-pcap-to-json/src/: main.rs  protocol_handler.rs  serializer.rs
crates/collector/: Cargo.toml  README.md  build.rs  config.yaml  config_bmp.yaml  config_ci_rpm_test.yaml  config_udpnotif_telemetry.yaml  config_vmware.yaml
crates/collector/benches/: enrich_ipfix_packet.rs
crates/collector/examples/: kafka-yang-consumer.rs  kafka_yang_consumer.rs
crates/collector/src/: config.rs  http.rs  lib.rs  main.rs
crates/flow-bench-client/: Cargo.toml
crates/flow-bench-client/src/: client.rs  multiple-actors.rs  single-actor.rs
crates/flow-pkt/: Cargo.toml  README.md  build.rs  release.sh
crates/flow-pkt/benches/: serde_benchmark.rs
crates/flow-pkt/examples/: ipfix-subregs.rs  ipfix-vmware.rs  ipfix.rs  netflow-subregs.rs  netflow.rs
crates/flow-pkt/registry/: huawei.xml  iana_ipfix_information_elements.xml  netgauze.xml  nokia.xml  vmware.xml
crates/flow-pkt/src/: codec.rs  ie.rs  ipfix.rs  lib.rs  netflow.rs
crates/flow-service/: Cargo.toml  README.md
crates/flow-service/examples/: actor-example.rs  actors-example.rs  kafka-example.rs  print-flow.rs
crates/flow-service/src/: codec.rs  flow_actor.rs  flow_supervisor.rs  lib.rs
crates/iana/: Cargo.toml  README.md
crates/iana/src/: address_family.rs  lib.rs  tcp.rs
crates/ipfix-code-generator/: Cargo.toml  README.md
crates/ipfix-code-generator/src/: generator.rs  generator_aggregation.rs  generator_sub_registries.rs  lib.rs  xml_parser.rs
crates/locate/: Cargo.toml
crates/locate/src/: lib.rs  tests.rs
crates/netconf-proto/: Cargo.toml  README.md
crates/netconf-proto/examples/: example.rs  fetch_schemas.rs  high-level.rs  low-level.rs  ssh.rs
crates/netconf-proto/src/: capabilities.rs  client.rs  codec.rs  lib.rs  protocol.rs  transport.rs  xml_parser.rs  xml_utils.rs  yanglib.rs  yangparser.rs
crates/parse-utils/: Cargo.toml  README.md
crates/parse-utils/src/: common.rs  error.rs  lib.rs  reader.rs  test_helpers.rs  traits.rs  writer.rs
crates/pcap-decoder/: Cargo.toml  README.md
crates/pcap-decoder/src/: lib.rs  main.rs  protocol_handler.rs
crates/pcap-decoder/tests/: integration_tests.rs
crates/pcap-reader/: Cargo.toml  README.md
crates/pcap-reader/data/: bmp.pcapng
crates/pcap-reader/examples/: parse.rs
crates/pcap-reader/src/: lib.rs
crates/serde-macros/: Cargo.toml  README.md
crates/serde-macros/src/: lib.rs
crates/udp-notif-pkt/: Cargo.toml  README.md
crates/udp-notif-pkt/examples/: udp-notif-listener.rs
crates/udp-notif-pkt/src/: codec.rs  decoded.rs  lib.rs  notification.rs  raw.rs
crates/udp-notif-service/: Cargo.toml  README.md
crates/udp-notif-service/examples/: udp-notif-actor.rs  udp-notif-actors.rs  udp-notif-print.rs  udp_notif_print.rs
crates/udp-notif-service/src/: actor.rs  lib.rs  supervisor.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_bgp_peer.rs  fuzz_bgp_pkt.rs  fuzz_bgp_pkt_serialize.rs  fuzz_bmp_pkt.rs  fuzz_bmp_pkt_serialize.rs  fuzz_flow_codec.rs  fuzz_ipfix_pkt.rs  fuzz_ipfix_pkt_serialize.rs  fuzz_netconf.rs  fuzz_netflow_v9_pkt.rs  fuzz_netflow_v9_pkt_serialize.rs  fuzz_udp_notif_pkt.rs  fuzz_udp_notif_pkt_serialize.rs
netgauze-bgp-pkt/: Cargo.toml  README.md
netgauze-bgp-pkt/benches/: serde_benchmark.rs
netgauze-bgp-pkt/examples/: bgp.rs
netgauze-bgp-pkt/src/: capabilities.rs  community.rs  iana.rs  lib.rs  nlri.rs  notification.rs  open.rs  path_attribute.rs  route_refresh.rs  update.rs
netgauze-bgp-pkt/src/serde/: mod.rs
netgauze-bmp-pkt/: Cargo.toml  README.md
netgauze-bmp-pkt/examples/: bmp.rs
netgauze-bmp-pkt/src/: iana.rs  lib.rs
netgauze-bmp-pkt/src/serde/: mod.rs
netgauze-bmpd/: Cargo.toml  README.md
netgauze-bmpd/src/: codec.rs  handle.rs  lib.rs  main.rs  server.rs  service.rs  transport.rs
netgauze-iana/: Cargo.toml  README.md
netgauze-iana/src/: address_family.rs  lib.rs
netgauze-ipfix-code-generator/: Cargo.toml  README.md
netgauze-ipfix-code-generator/src/: generator.rs  lib.rs  xml_parser.rs
netgauze-ipfix-pkt/: Cargo.toml  build.rs
netgauze-ipfix-pkt/benches/: serde_benchmark.rs
netgauze-ipfix-pkt/src/: ie.rs  ipfix.rs  lib.rs
netgauze-ipfix-pkt/src/wire/: mod.rs
netgauze-parse-utils/: Cargo.toml
netgauze-parse-utils/src/: lib.rs  test_helpers.rs
netgauze-serde-macros/: Cargo.toml
netgauze-serde-macros/src/: lib.rs
netgauze-serde-macros/tests/: tests.rs
netgauze-serde-macros/tests/trybuild/: 01-plain.rs  03-from-external-not-defined.rs  03-from-external-not-defined.stderr  05-from-located-no-module.stderr  06-from-nom-multiple.rs  06-from-nom-multiple.stderr  07-writing-plain.rs  09-writing-from.rs
(+445 files in other folders)
