[workspace]
members = [
    "crates/pcap-reader",
    "crates/bgp-pkt",
    "crates/bgp-speaker",
    "crates/bmp-service",
    "crates/bmp-pkt",
    "crates/iana",
    "crates/ipfix-code-generator",
    "crates/flow-pkt",
    "crates/flow-service",
    "crates/locate",
    "crates/parse-utils",
    "crates/serde-macros",
    "crates/udp-notif-pkt",
    "crates/collector",
    "fuzz",
]
resolver = "2"

[workspace.dependencies]
netgauze-pcap-reader = { version = "0.5.0", path = "crates/pcap-reader" }
netgauze-bgp-pkt = { version = "0.5.0", path = "crates/bgp-pkt" }
netgauze-bgp-speaker = { version = "0.5.0", path = "crates/bgp-speaker" }
netgauze-bmp-service = { version = "0.5.0", path = "crates/bmp-service" }
netgauze-bmp-pkt = { version = "0.5.0", path = "crates/bmp-pkt" }
netgauze-iana = { version = "0.5.0", path = "crates/iana" }
netgauze-ipfix-code-generator = { version = "0.5.0", path = "crates/ipfix-code-generator" }
netgauze-flow-pkt = { version = "0.5.0", path = "crates/flow-pkt" }
netgauze-flow-service = { version = "0.5.0", path = "crates/flow-service" }
netgauze-locate = { version = "0.5.0", path = "crates/locate" }
netgauze-parse-utils = { version = "0.5.0", path = "crates/parse-utils" }
netgauze-serde-macros = { version = "0.5.0", path = "crates/serde-macros" }
netgauze-udp-notif-pkt = { version = "0.5.0", path = "crates/udp-notif-pkt" }
log = "0.4"
thiserror = "2.0"
byteorder = { version = "1.5" }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
criterion = { version = "0.5" } # Dev dep for bench
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
pin-project = "1.1"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-test = "0.4"
tower = { version = "0.5", features = ["full"] }
tower-service = "0.3"
tower-layer = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
lazy_static = "1.5"
rand = "0.8"
ipnet = { version = "2.9", features = ["serde"] }
strum = "0.26"
strum_macros = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
nom = { version = "7.1", default-features = false, features = ["alloc"] }
reqwest = { version = "0.12", features = ["blocking"] }
roxmltree = "0.20"
arbitrary = { version = "1", features = ["derive"] }
arbitrary_ext = { version = "0.3" }
rstest = "0.23"
pcap-parser = { version = "0.16", features = ["data"] }
clap = { version = "4.5", features = ["derive"] }
socket2 = { version = "0.5" }
