[workspace]
members = [
    "crates/analytics",
    "crates/pcap-reader",
    "crates/bgp-pkt",
    "crates/bgp-speaker",
    "crates/bmp-service",
    "crates/bmp-pkt",
    "crates/iana",
    "crates/ipfix-code-generator",
    "crates/flow-pkt",
    "crates/flow-service",
    "crates/locate",
    "crates/parse-utils",
    "crates/serde-macros",
    "crates/udp-notif-pkt",
    "crates/udp-notif-service",
    "crates/collector",
    "fuzz",
]
resolver = "2"

[workspace.dependencies]
netgauze-pcap-reader = { version = "0.6.0", path = "crates/pcap-reader" }
netgauze-bgp-pkt = { version = "0.6.0", path = "crates/bgp-pkt" }
netgauze-bgp-speaker = { version = "0.6.0", path = "crates/bgp-speaker" }
netgauze-bmp-service = { version = "0.6.0", path = "crates/bmp-service" }
netgauze-bmp-pkt = { version = "0.6.0", path = "crates/bmp-pkt" }
netgauze-iana = { version = "0.6.0", path = "crates/iana" }
netgauze-ipfix-code-generator = { version = "0.6.0", path = "crates/ipfix-code-generator" }
netgauze-flow-pkt = { version = "0.6.0", path = "crates/flow-pkt" }
netgauze-flow-service = { version = "0.6.0", path = "crates/flow-service" }
netgauze-locate = { version = "0.6.0", path = "crates/locate" }
netgauze-parse-utils = { version = "0.6.0", path = "crates/parse-utils" }
netgauze-serde-macros = { version = "0.6.0", path = "crates/serde-macros" }
netgauze-udp-notif-pkt = { version = "0.6.0", path = "crates/udp-notif-pkt" }
netgauze-udp-notif-service = { version = "0.6.0", path = "crates/udp-notif-service" }
netgauze-analytics = { version = "0.6.0", path = "crates/analytics" }
log = "0.4"
thiserror = "2.0"
async-channel = "2.3"
libc = { version = "0.2" }
byteorder = { version = "1.5" }
chrono = { version = "0.4", default-features = false }
criterion = { version = "0.5" }                                                             # Dev dep for bench
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
pin-project = "1.1"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }
tokio-test = "0.4"
tower = { version = "0.5" }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
rand = "0.9"
ipnet = { version = "2.9" }
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0" }
serde_json = "1"
nom = { version = "7.1" }
reqwest = { version = "0.12", default-features = false }
roxmltree = "0.20"
arbitrary = { version = "1" }
arbitrary_ext = { version = "0.3" }
rstest = "0.25"
pcap-parser = { version = "0.16" }
clap = { version = "4.5" }
socket2 = { version = "0.5" }
either = { version = "1.13" }
opentelemetry = { version = "0.27" }
opentelemetry_sdk = { version = "0.27" }
opentelemetry-otlp = { version = "0.28" }
anyhow = { version = "1" }
serde_with = { version = "3.11" }
indexmap = { version = "2.7" }
apache-avro = { version = "0.17" }
schema_registry_converter = { version = "4.2", default-features = false }
rdkafka = { version = "0.37", default-features = false }
tracing-test = { version = "0.2" }
syn = { version = "2.0" }
quote = { version = "1.0" }
trybuild = { version = "1.0" }
regex = { version = "1.10" }
pdu = { version = "1.4" }
pin-utils = { version = "0.1" }
serde_yaml = { version = "0.9" }
ciborium = { version = "0.2" }
