[workspace]
members = [
    "crates/analytics",
    "crates/pcap-reader",
    "crates/bgp-pkt",
    "crates/bgp-speaker",
    "crates/bmp-service",
    "crates/bmp-pkt",
    "crates/iana",
    "crates/ipfix-code-generator",
    "crates/flow-pkt",
    "crates/flow-service",
    "crates/locate",
    "crates/parse-utils",
    "crates/serde-macros",
    "crates/udp-notif-pkt",
    "crates/udp-notif-service",
    "crates/collector",
    "crates/yang-push",
    "crates/pcap-decoder",
    "crates/netconf-proto",
    "fuzz",
]
resolver = "2"

[workspace.dependencies]
netgauze-pcap-reader = { version = "0.9.0", path = "crates/pcap-reader" }
netgauze-bgp-pkt = { version = "0.9.0", path = "crates/bgp-pkt" }
netgauze-bgp-speaker = { version = "0.9.0", path = "crates/bgp-speaker" }
netgauze-bmp-service = { version = "0.9.0", path = "crates/bmp-service" }
netgauze-bmp-pkt = { version = "0.9.0", path = "crates/bmp-pkt" }
netgauze-iana = { version = "0.9.0", path = "crates/iana" }
netgauze-ipfix-code-generator = { version = "0.9.0", path = "crates/ipfix-code-generator" }
netgauze-flow-pkt = { version = "0.9.0", path = "crates/flow-pkt" }
netgauze-flow-service = { version = "0.9.0", path = "crates/flow-service" }
netgauze-locate = { version = "0.9.0", path = "crates/locate" }
netgauze-parse-utils = { version = "0.9.0", path = "crates/parse-utils" }
netgauze-serde-macros = { version = "0.9.0", path = "crates/serde-macros" }
netgauze-udp-notif-pkt = { version = "0.9.0", path = "crates/udp-notif-pkt" }
netgauze-udp-notif-service = { version = "0.9.0", path = "crates/udp-notif-service" }
netgauze-analytics = { version = "0.9.0", path = "crates/analytics" }
netgauze-yang-push = { version = "0.9.0", path = "crates/yang-push" }
netgauze-pcap-decoder = { version = "0.9.0", path = "crates/pcap-decoder" }
netgauze-netconf-proto = { version = "0.9.0", path = "crates/netconf-proto" }
thiserror = "2.0"
async-channel = "2.5"
libc = { version = "0.2" }
byteorder = { version = "1.5" }
chrono = { version = "0.4", default-features = false }
criterion = { version = "0.8" }                                                             # Dev dep for bench
futures = "0.3"
futures-util = "0.3"
futures-core = "0.3"
pin-project = "1.1"
tokio = { version = "1" }
tokio-util = { version = "0.7" }
tokio-stream = { version = "0.1" }
tokio-test = "0.4"
tower = { version = "0.5" }
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.10"
rand = "0.9"
ipnet = { version = "2.11" }
strum = "0.27"
strum_macros = "0.27"
serde = { version = "1.0" }
serde_json = "1"
nom = { version = "7.1" }
reqwest = { version = "0.12", default-features = false }
roxmltree = "0.21"
arbitrary = { version = "1" }
arbitrary_ext = { version = "0.3" }
rstest = "0.26"
pcap-parser = { version = "0.17" }
clap = { version = "4.5" }
socket2 = { version = "0.6" }
either = { version = "1.15" }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31" }
opentelemetry-otlp = { version = "0.31" }
anyhow = { version = "1" }
serde_with = { version = "3.16" }
indexmap = { version = "2.12" }
apache-avro = { version = "0.21" }
schema_registry_converter = { version = "4.7", default-features = false }
rdkafka = { version = "0.38", default-features = false }
tracing-test = { version = "0.2" }
syn = { version = "2.0" }
quote = { version = "1.0" }
trybuild = { version = "1.0" }
regex = { version = "1.12" }
pdu = { version = "1.4" }
pin-utils = { version = "0.1" }
serde_yaml = { version = "0.9" }
ciborium = { version = "0.2" }
ordered-float = { version = "5.1", default-features = false }
proc-macro2 = { version = "1.0" }
prettyplease = { version = "0.2" }
sysinfo = { version = "0.37" }
shadow-rs = { version = "1.5", default-features = false }
smallvec = { version = "1.15" }
rustc-hash = { version = "2.1" }
yang4 = { version = "0.1", features = ["bundled"] }
tempfile = { version = "3.23.0" }
quick-xml = { version = "0.39" }
russh = { version = "0.56" }
secrecy = { version = "0.10" }
notify = { version = "8.2" }
petgraph = { version = "0.8" }
sha2 = { version = "0.10" }
schema-registry-client = { version = "0.4" }
bitflags = { version = "2.10" }

[profile.release]
codegen-units = 1
lto = true

[workspace.lints.rust]
unused_must_use = { level = "forbid", priority = 1 }
future_incompatible = { level = "deny", priority = 2 }
nonstandard_style = { level = "deny", priority = 3 }
rust_2018_idioms = { level = "deny", priority = 4 }
rust-2024-compatibility = { level = "warn", priority = 6 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
uninlined_format_args = { level = "deny", priority = 0 }
dbg_macro = { level = "deny", priority = 0 }
disallowed_methods = { level = "deny", priority = 0 }
disallowed_types = { level = "deny", priority = 0 }
explicit_into_iter_loop = { level = "deny", priority = 0 }
explicit_iter_loop = { level = "deny", priority = 0 }
inconsistent_struct_constructor = { level = "deny", priority = 0 }
unused_async = { level = "deny", priority = 0 }
map_flatten = { level = "deny", priority = 0 }
no_effect_underscore_binding = { level = "deny", priority = 0 }
await_holding_lock = { level = "deny", priority = 0 }
too_long_first_doc_paragraph = { level = "allow", priority = 0 }
new_without_default = { level = "allow", priority = 1 }

[workspace.lints.rustdoc]
broken_intra_doc_links = { level = "warn", priority = 0 }
