[package]
name = "bgp-fuzz"
version = "0.0.1"
publish = false
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = """Fuzzers for NetGauze"""

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
netgauze-parse-utils = { path = "../crates/parse-utils" }
netgauze-bgp-pkt = { path = "../crates/bgp-pkt", features = ["serde"] }
netgauze-bmp-pkt = { path = "../crates/bmp-pkt", features = ["serde"] }
netgauze-flow-pkt = { path = "../crates/flow-pkt", features = ["serde"] }

[[bin]]
name = "fuzz-bgp-pkt"
path = "fuzz_targets/fuzz_bgp_pkt.rs"
test = false
doc = false

[[bin]]
name = "fuzz-bmp-pkt"
path = "fuzz_targets/fuzz_bmp_pkt.rs"
test = false
doc = false

[[bin]]
name = "fuzz-ipfix-pkt"
path = "fuzz_targets/fuzz_ipfix_pkt.rs"
test = false
doc = false

[[bin]]
name = "fuzz-netflow-v9-pkt"
path = "fuzz_targets/fuzz_netflow_v9_pkt.rs"
test = false
doc = false
