[package]
name = "netgauze-fuzz"
version = "0.4.1"
publish = false
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = """Fuzzers for NetGauze"""
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
netgauze-parse-utils = { path = "../crates/parse-utils" }
netgauze-iana = { path = "../crates/iana", features = ["fuzz"] }
netgauze-bgp-pkt = { path = "../crates/bgp-pkt", features = ["serde", "fuzz"] }
netgauze-bgp-speaker = { path = "../crates/bgp-speaker", features = ["fuzz"] }
netgauze-bmp-pkt = { path = "../crates/bmp-pkt", features = ["serde", "fuzz"] }
netgauze-flow-pkt = { path = "../crates/flow-pkt", features = ["serde", "fuzz"] }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-test = { workspace = true }
futures-core = { workspace = true }

[[bin]]
name = "fuzz-bgp-peer"
path = "fuzz_targets/fuzz_bgp_peer.rs"
test = false
doc = false

[[bin]]
name = "fuzz-bgp-pkt"
path = "fuzz_targets/fuzz_bgp_pkt.rs"
test = false
doc = false

[[bin]]
name = "fuzz-bgp-pkt-serialize"
path = "fuzz_targets/fuzz_bgp_pkt_serialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz-bmp-pkt"
path = "fuzz_targets/fuzz_bmp_pkt.rs"
test = false
doc = false

[[bin]]
name = "fuzz-bmp-pkt-serialize"
path = "fuzz_targets/fuzz_bmp_pkt_serialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz-ipfix-pkt"
path = "fuzz_targets/fuzz_ipfix_pkt.rs"
test = false
doc = false

[[bin]]
name = "fuzz-ipfix-pkt-serialize"
path = "fuzz_targets/fuzz_ipfix_pkt_serialize.rs"
test = false
doc = false

[[bin]]
name = "fuzz-netflow-v9-pkt"
path = "fuzz_targets/fuzz_netflow_v9_pkt.rs"
test = false
doc = false
