[package]
name = "netgauze-bgp-pkt"
version = "0.0.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = """
BGP-4 Protocol representation and serde.
"""

[dependencies]
netgauze-iana = { path = "../netgauze-iana" }
netgauze-locate = { path = "../netgauze-locate", optional = true }
netgauze-parse-utils = { path = "../netgauze-parse-utils", optional = true }
netgauze-serde-macros = { path = "../netgauze-serde-macros", optional = true }
ipnet = { version = "2.7", features=["serde"] }
strum = "0.24"
strum_macros = "0.24"
serde = { version = "1.0", features = ["derive"] }
nom = { version = "7.1", optional = true }
byteorder = { version = "1.4", optional = true }
criterion = { version = "0.4", optional = true } # Dev dep for bench

[features]
default = ["serde"]
serde = ["nom", "byteorder", "netgauze-locate", "netgauze-parse-utils", "netgauze-serde-macros"]
bench = ["criterion"]


[dev-dependencies]
netgauze-parse-utils = { path = "../netgauze-parse-utils", features = ["test-helpers"] }


[[bench]]
name = "serde_benchmark"
harness = false
required-features = ["bench"]
