[package]
name = "netgauze-ipfix-code-generator"
version = "0.0.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = """
Generate Rust code bindings for IPFIX Information Elements
"""


[dependencies]
roxmltree = "0.15"
log = "0.4"