[package]
name = "netgauze-ipfix-code-generator"
version = "0.0.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = """
Generate Rust code bindings for IPFIX Information Elements
"""


[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
roxmltree = "0.17"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"