[package]
name = "netgauze-ipfix-pkt"
version = "0.0.1"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
description = """
Netflow(v9)/IPFIX(v10) Protocol representation and serde
"""

[dependencies]
netgauze-locate = { path = "../netgauze-locate", optional = true }
netgauze-parse-utils = { path = "../netgauze-parse-utils", optional = true }
netgauze-serde-macros = { path = "../netgauze-serde-macros", optional = true }
serde = {version = "1.0", features = ["derive"]}
strum = "0.24"
strum_macros = "0.24"
ipnet = { version = "2.5", features=["serde"] }
lazy_static = "1.4"
chrono = {version="0.4", features=["serde"]}
nom = { version = "7.1", optional = true }
byteorder = { version = "1.4", optional = true }


[features]
default = ["serde"]
serde = ["nom", "byteorder", "netgauze-locate", "netgauze-parse-utils", "netgauze-serde-macros"]


[dev-dependencies]
netgauze-parse-utils = { path = "../netgauze-parse-utils", features = ["test-helpers"] }


[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
roxmltree = "0.15"
netgauze-ipfix-code-generator = {path = "../netgauze-ipfix-code-generator"}
