[package]
name = "netgauze-analytics"
version = "0.5.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Analytics infrastructure related library
"""
keywords = ["streaming", "real-time", "analytics"]
categories = ["algorithms", "data-structures"]

[dependencies]
either = {workspace = true}
chrono = {workspace = true}
