[package]
name = "netgauze-analytics"
version = "0.6.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
Analytics infrastructure related library
"""
keywords = ["streaming", "real-time", "analytics"]
categories = ["algorithms", "data-structures"]

[dependencies]
either = { workspace = true }
chrono = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
futures = { workspace = true }
futures-core = { workspace = true }
pin-project = { workspace = true }

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}
