[package]
name = "netgauze-bgp-pkt"
version = "0.3.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BGP-4 Protocol representation and serde.
"""
keywords = ["bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-iana = { version = "0.3.0", path = "../iana", features = ["json-schema"] }
netgauze-locate = { version = "0.3.0", path = "../locate", optional = true }
netgauze-parse-utils = { version = "0.3.0", path = "../parse-utils", optional = true }
netgauze-serde-macros = { version = "0.3.0", path = "../serde-macros", optional = true }
ipnet = { workspace = true, features = ["schemars"]}
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
nom = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
criterion = { workspace = true, optional = true } # Dev dep for bench
arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }
bytes = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }

[features]
default = ["serde", "json-schema", "schemars"]
serde = ["nom", "byteorder", "netgauze-locate", "netgauze-parse-utils", "netgauze-serde-macros"]
codec = ["log", "tokio-util", "bytes"]
bench = ["criterion"]
fuzz = ["arbitrary", "arbitrary_ext"]
json-schema = ["schemars"]


[dev-dependencies]
netgauze-pcap-reader = { version = "0.3.0", path = "../pcap-reader" }
netgauze-parse-utils = { version = "0.3.0", path = "../parse-utils", features = ["test-helpers"] }
serde_json = { workspace = true }
rstest = { workspace = true }
pcap-parser = { workspace = true, features = ["data"] }



[[bench]]
name = "serde_benchmark"
harness = false
required-features = ["bench"]
