lints.workspace = true

[package]
name = "netgauze-bgp-pkt"
version = "0.12.1"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BGP-4 Protocol representation and serde.
"""
keywords = ["bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-iana = { workspace = true }
netgauze-parse-utils = { workspace = true, optional = true }
ipnet = { workspace = true, features = ["serde"] }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }
criterion = { workspace = true, optional = true } # Dev dep for bench
arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tokio-util = { workspace = true, default-features = false, features = ["codec"], optional = true }
bytes = { workspace = true, optional = true }
schemars = { workspace = true, features = ["derive"], optional = true }
thiserror = { workspace = true }

[features]
default = ["serde"]
serde = [
    "netgauze-parse-utils",
]
codec = ["tracing", "tokio-util", "bytes"]
bench = ["criterion", "codec"]
fuzz = ["arbitrary", "arbitrary_ext", "netgauze-iana/fuzz"]
json-schema = ["schemars", "netgauze-iana/json-schema", "ipnet/schemars1"]

[dev-dependencies]
netgauze-pcap-reader = { workspace = true }
netgauze-parse-utils = { workspace = true, features = ["test-helpers"] }
serde_json = { workspace = true }
rstest = { workspace = true }
pcap-parser = { workspace = true, features = ["data"] }

[[bench]]
name = "serde_benchmark"
harness = false
required-features = ["bench"]
