lints.workspace = true

[package]
name = "netgauze-bgp-speaker"
version = "0.8.0"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BGP Speaker: Establish connection and exchange messages with other BGP peers
"""
keywords = ["bgp", "protocol"]
categories = ["network-programming"]

[dependencies]
netgauze-bgp-pkt = { workspace = true, features = ["codec"] }
netgauze-iana = { workspace = true }
netgauze-parse-utils = { workspace = true }
chrono = { workspace = true, default-features = false, features = [
    "std",
    "clock",
] }

tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
pin-project = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
log = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }

arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }

[features]
fuzz = ["arbitrary", "arbitrary_ext"]

[dev-dependencies]
tokio-test = { workspace = true }
env_logger = "0.11"
test-log = "0.2"
clap = { workspace = true, features = ["derive"] }
