lints.workspace = true

[package]
name = "netgauze-bgp-speaker"
version = "0.9.2"
edition = "2024"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BGP Speaker: Establish connection and exchange messages with other BGP peers
"""
keywords = ["bgp", "protocol"]
categories = ["network-programming"]

[dependencies]
netgauze-bgp-pkt = { workspace = true, features = ["codec"] }
netgauze-iana = { workspace = true }
netgauze-parse-utils = { workspace = true }
chrono = { workspace = true, default-features = false, features = [
    "std",
    "clock",
] }

tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread", "net", "time", "signal"] }
tokio-util = { workspace = true, default-features = false, features = ["codec"] }
futures = { workspace = true }
futures-util = { workspace = true }
futures-core = { workspace = true }
pin-project = { workspace = true }
tokio-stream = { workspace = true, features = ["net"] }
tracing = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }
strum_macros = { workspace = true }
serde = { workspace = true, features = ["derive"] }

arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }

[features]
fuzz = ["arbitrary", "arbitrary_ext"]

[dev-dependencies]
tokio = { workspace = true, default-features = false, features = ["macros", "rt-multi-thread"] }
tokio-test = { workspace = true }
tracing-test = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
