[package]
name = "netgauze-bmp-pkt"
version = "0.5.0"
edition = "2021"
authors = ["Ahmed Elhassany <a.hassany@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/NetGauze/NetGauze"
homepage = "https://github.com/NetGauze/NetGauze"
description = """
BMP Protocol representation and serde.
"""
keywords = ["bmp", "bgp", "parser", "protocol"]
categories = ["network-programming", "parsing"]

[dependencies]
netgauze-iana = { workspace = true }
netgauze-bgp-pkt = { workspace = true  }
netgauze-locate = { workspace = true , optional = true }
netgauze-parse-utils = { workspace = true, optional = true }
netgauze-serde-macros = { workspace = true , optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
chrono = { workspace = true }
ipnet = { workspace = true, features = ["serde"] }
nom = { workspace = true, optional = true }
byteorder = { workspace = true, optional = true }
criterion = { workspace = true, optional = true } # Dev dep for bench
serde = { workspace = true, features = ["derive"] }
arbitrary = { workspace = true, optional = true }
arbitrary_ext = { workspace = true, optional = true }
log = { workspace = true, optional = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }
bytes = { workspace = true, optional = true }
either = { version = "1.13.0" }

[features]
default = ["serde"]
serde = ["nom", "byteorder", "netgauze-locate", "netgauze-parse-utils", "netgauze-serde-macros"]
codec = ["log", "tokio-util", "bytes"]
bench = ["criterion"]
fuzz = ["arbitrary", "arbitrary_ext"]

[dev-dependencies]
netgauze-pcap-reader = { workspace = true }
netgauze-parse-utils = { workspace = true, features = ["test-helpers"] }
chrono = { workspace = true, default-features = false, features = ["std", "serde", "clock"] }
serde_json = { workspace = true }
rstest = { workspace = true }
pcap-parser = { workspace = true, features = ["data"] }
